# facetagger-lib

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lib-deploy.yml  lib-e2e-test  lib-e2e-test.yml  lib-test.yml  lib-unit-test.yml
src/face_tagger/: __init__.py  classifier.py  detector.py  embedder.py  face_tagger.py  utils.py
src/face_tagger/models/: __init__.py  image_object.py
tests/: face_tagger_e2e_test.py  face_tagger_unit_test.py  test_face_tagger.py
