[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "face_tagger"
version = "0.0.3"
authors = [
  { name="Bae SungJoon", email="clcc001@naver.com" },
  { name="Yoon JongBeom", email="home99032@naver.com" },
  { name="Sohn YoungJin", email="sonkim1001@naver.com" },
  { name="Choi JunHwan", email="csd100j@gmail.com" }
]
description = "A library for face recognition in multiple images and classification of photos containing each individual."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Face-Tagger"
"Bug Tracker" = "https://github.com/Face-Tagger/facetagger-lib/issues"